--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	
 	<body>	
 		
-		<h1>OLHA A SANNY AÍ</h1>
-		<p>Uma linha aleatória!</p>
-		<p> Uma segunda linha aleatória!</p>
-		<h2>E uma linha de teste...222</h2>
-		<h3>asltweradosjdfkaDHBV</h3>
-		<h4>Annnnnn</h4>
+		<h1>SANNY BAUDELAIRE</h1>
+		<p>Simplismente</p>
+		<p> ========================</p>
+		<h2>..</h2>
+		<h3>=-=-=-=-=-=-=-=-=-=-=</h3>
+		<h4>é isso</h4>
 		<img src="img/sanny.jpg" alt="Uma triquetra" width="540px" height= "960px"/><br>
 	</body>
 </html>	
