--- a/index.html
+++ b/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SANNY BAUDELAIRE</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f3f3;
+        }
 
-	<head>
- 
-		<title>Título da página</title>
-	
-		<meta charset="utf-8">
-	</head>
-	
-	<body>	
-		
-		<h1>SANNY BAUDELAIRE</h1>
-		<p>Simplismente</p>
-		<p> ========================</p>
-		<h2>..</h2>
-		<h3>=-=-=-=-=-=-=-=-=-=-=</h3>
-		<h4>é isso</h4>
-		<img src="img/sanny.jpg" alt="Uma triquetra" width="540px" height= "960px"/><br>
-	</body>
-</html>	
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+        }
+
+        img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>SANNY BAUDELAIRE</h1>
+        <p>Simplesmente</p>
+    </header>
+    <main>
+        <section>
+            <h2>...</h2>
+            <h3>=-=-=-=-=-=-=-=-=-=-=</h3>
+            <h4>é isso</h4>
+            <img src="img/sanny.jpg" alt="Uma triquetra" width="540px" height="960px">
+        </section>
+    </main>
+</body>
+</html>
