--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <header>
-        <h1>SANNY BAUDELAIRE</h1>
+        <h1>SANNY BAUDELAIRE.</h1>
         <p>Simplesmente</p>
     </header>
     <main>
