--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 	
 	<body>	
 		
-		<h1>OLHA A SANNY AÍ</h1>
-		<p>Uma linha aleatóxcvdvxvxcria!</p>
-		<p> Uma segunda linha aleatória!</p>
-		<h2>E uma linha de teste...</h2>
-		<h3>asltweradosjdfkaDHBV</h3>
-		<h4>Annnnnn</h4>
+		<h1>LIVINHA OLHA MEU GATO</h1>
+		<p>Muito bonito</p>
+		
 		<img src="img/sanny.jpg" alt="Uma triquetra" width="540px" height= "960px"/><br>
 	</body>
 </html>	
