--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	
 	<body>	
 		
-		<h1>LIVINHA OLHA MEU GATO</h1>
-		<p>Muito bonito</p>
+		<h1>SANNY BAUDELEIRE</h1>
+		<p>Gato</p>
 		
 		<img src="img/sanny.jpg" alt="Uma triquetra" width="540px" height= "960px"/><br>
 	</body>
